objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Mack</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Other</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volvo</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_on_Report__c</fullName>
        <formula>IF(ISBLANK( SurvivingAccount__c ) ,  ConvertedAccountId , SurvivingAccount__c)</formula>
        <label>ActualAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture/Farm</fullName>
                </value>
                <value>
                    <fullName>Bulk Haul – Dry &amp; Liquid</fullName>
                </value>
                <value>
                    <fullName>Concrete Mixer</fullName>
                </value>
                <value>
                    <fullName>Crane</fullName>
                </value>
                <value>
                    <fullName>Dump Truck</fullName>
                </value>
                <value>
                    <fullName>Flatbed</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>Mining/Quarry</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Oversized Load</fullName>
                </value>
                <value>
                    <fullName>Petroleum &amp; Oil</fullName>
                </value>
                <value>
                    <fullName>Plow</fullName>
                </value>
                <value>
                    <fullName>Refuse</fullName>
                </value>
                <value>
                    <fullName>Urban Distribution</fullName>
                </value>
                <value>
                    <fullName>Sewer &amp; Septic</fullName>
                </value>
                <value>
                    <fullName>TL / LTL</fullName>
                </value>
                <value>
                    <fullName>anker</fullName>
                </value>
                <value>
                    <fullName>Temperature Controlled / Reefer</fullName>
                </value>
                <value>
                    <fullName>Vehicle Transporter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Tradeshow_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Tradeshow Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerAccountName__c</fullName>
        <label>DealerAccountName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <label>Eloqua Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Contact ID for loading marketing leads</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag_for_Map_to_Account_do_not_map_load__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used for Lead Conversion mapping to Account to drive validation rules on Account about creating a new account when processing lead conversion.  Used because lead conversion model and process out of the box is not customizable to prevent new accounts being created during lead conversion.  Will map to Account.</description>
        <label>Flag for Map to Account (do not display)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <description>Fleet size picklist populated from Eloqua</description>
        <label>Fleet Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Towing</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Farm</fullName>
                </value>
                <value>
                    <fullName>Beverage Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Construction/Concrete Pump</fullName>
                </value>
                <value>
                    <fullName>Construction/Crane</fullName>
                </value>
                <value>
                    <fullName>Construction/Dump</fullName>
                </value>
                <value>
                    <fullName>Construction/Ready Mix</fullName>
                </value>
                <value>
                    <fullName>Construction/Roll-Off</fullName>
                </value>
                <value>
                    <fullName>Construction/Vacuum</fullName>
                </value>
                <value>
                    <fullName>Food Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Forestry/Lumber</fullName>
                </value>
                <value>
                    <fullName>General Freight</fullName>
                </value>
                <value>
                    <fullName>Government/Municipal</fullName>
                </value>
                <value>
                    <fullName>Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Landscaping/Horticulture</fullName>
                </value>
                <value>
                    <fullName>Lease/Finance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining/Quarring</fullName>
                </value>
                <value>
                    <fullName>Moving and Storage</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Sanitation/Hazardous Material</fullName>
                </value>
                <value>
                    <fullName>Sanitation/Refuse</fullName>
                </value>
                <value>
                    <fullName>Specialized/Heavy Hauling</fullName>
                </value>
                <value>
                    <fullName>Utility Services</fullName>
                </value>
                <value>
                    <fullName>Wholesale/Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Invalid_Unqualified_Leads_Comments__c</fullName>
        <label>Unqualified Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Invalid_Unqualified_Reason__c</fullName>
        <label>Lead Invalid/Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Buy</fullName>
                </value>
                <value>
                    <fullName>Finance term/Customer Credit</fullName>
                </value>
                <value>
                    <fullName>Lead Time/Availability</fullName>
                </value>
                <value>
                    <fullName>Operating Cost/Reliability</fullName>
                </value>
                <value>
                    <fullName>Parts &amp; Service Support</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Offering/Feature</fullName>
                </value>
                <value>
                    <fullName>Quote Response Time</fullName>
                </value>
                <value>
                    <fullName>Relationship to Competitor</fullName>
                </value>
                <value>
                    <fullName>Trade In/Residual Value</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>Lead Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Eloqua Lead Score Field</description>
        <inlineHelpText>Maps to the Eloqua Lead Score</inlineHelpText>
        <label>Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Unqualified_Comments__c</fullName>
        <label>Lead Unqualified Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Unqualified_Reason__c</fullName>
        <label>Lead Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Already Quoted</fullName>
                </value>
                <value>
                    <fullName>Already Bought</fullName>
                </value>
                <value>
                    <fullName>Not Buying</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Outside AOR</fullName>
                    <isActive>false</isActive>
                    <label>Outside AOR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <description>Customer Party ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Customer Account Unique Identifier</inlineHelpText>
        <label>Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Truck</fullName>
                    <default>true</default>
                    <label>New Truck</label>
                </value>
                <value>
                    <fullName>Used Truck</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Pinnacle</fullName>
                </value>
                <value>
                    <fullName>Granite</fullName>
                </value>
                <value>
                    <fullName>TerraPro</fullName>
                </value>
                <value>
                    <fullName>LR</fullName>
                </value>
                <value>
                    <fullName>Services &amp; Support</fullName>
                </value>
                <value>
                    <fullName>VNL</fullName>
                </value>
                <value>
                    <fullName>VNR</fullName>
                </value>
                <value>
                    <fullName>VHD</fullName>
                </value>
                <value>
                    <fullName>VNX</fullName>
                </value>
                <value>
                    <fullName>VAH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Probability__c</fullName>
        <label>Purchase Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Timeframe__c</fullName>
        <description>For predictive leads, mapped from Purchase Time Frame field
a</description>
        <label>Purchase Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within 30 days</fullName>
                </value>
                <value>
                    <fullName>30 to 90 days</fullName>
                </value>
                <value>
                    <fullName>3 to 6 months</fullName>
                </value>
                <value>
                    <fullName>6 months to 1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of Lead, required for Sharing Rules</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CST &gt;10L</fullName>
                </value>
                <value>
                    <fullName>CST &lt;10L</fullName>
                </value>
                <value>
                    <fullName>LH</fullName>
                </value>
                <value>
                    <fullName>LCOE</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurvivingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurvivingAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Truck_Configuration_URL__c</fullName>
        <label>Truck Configuration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Comments__c</fullName>
        <label>User Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBrand__c</fullName>
        <description>To match logged in user dealer brand with lead brand for dynamic rendering of list views</description>
        <formula>IF( TEXT(Brand__c)  = TEXT($User.Dealer_Brand__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerCode__c</fullName>
        <formula>CONTAINS(Owner:Queue.QueueName,$User.Dealer_Code__c)  || 
CONTAINS(Dealer_Code__c,$User.Dealer_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecutiveGroup__c</fullName>
        <formula>CONTAINS($User.Executive_group__c, Dealer_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isExecutiveGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRegion__c</fullName>
        <formula>IF(TEXT(Region__c) = TEXT($User.Region__c),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isRegion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>A112_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A112 - Lead Queue</label>
        <queue>A112</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A202_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A202 - Lead Queue</label>
        <queue>A202</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A310_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A310 - Lead Queue</label>
        <queue>A310</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A316_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A316 - Lead Queue</label>
        <queue>A316</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A318_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A318 - Lead Queue</label>
        <queue>A318</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A319_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A319 - Lead Queue</label>
        <queue>A319</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A325_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A325 - Lead Queue</label>
        <queue>A325</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A326_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A326 - Lead Queue</label>
        <queue>A326</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A327_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A327 - Lead Queue</label>
        <queue>A327</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A332_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A332 - Lead Queue</label>
        <queue>A332</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A336_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A336 - Lead Queue</label>
        <queue>A336</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A341_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A341 - Lead Queue</label>
        <queue>A341</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A343_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A343 - Lead Queue</label>
        <queue>A343</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A344_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A344 - Lead Queue</label>
        <queue>A344</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>A349_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>A349 - Lead Queue</label>
        <queue>A349</queue>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>Mack</fullName>
        <active>true</active>
        <businessProcess>Volvo</businessProcess>
        <label>Mack</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <businessProcess>Mack</businessProcess>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volvo</fullName>
        <active>true</active>
        <businessProcess>Volvo</businessProcess>
        <label>Volvo</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Party_ID_Required_before_Converting</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsConverted, 
OR( 
ISBLANK(Party_ID__c)
))</errorConditionFormula>
        <errorMessage>Please find the correct Account and add the Party ID to the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Predictive</fullName>
        <active>true</active>
        <description>If &apos;Lead Type&apos; = Predictive, don&apos;t allow this value to be changed by any end user.</description>
        <errorConditionFormula>TEXT(LeadSource) == &apos;Predictive&apos;</errorConditionFormula>
        <errorDisplayField>Purchase_Probability__c</errorDisplayField>
        <errorMessage>If &apos;Lead Type&apos; = Predictive, this value cannot be changed by any end user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_to_Save_Lead</fullName>
        <active>true</active>
        <description>Required Fields: Last Name, Company, Phone OR Email, Brand (even non Volvo / Mack),</description>
        <errorConditionFormula>OR(
        ISBLANK(LastName),
        ISBLANK(Company),
        ISBLANK(TEXT(Brand__c))
      
,
(AND (
ISBLANK(Phone),
    ISBLANK(Email)
				)
))</errorConditionFormula>
        <errorMessage>Either Phone OR Email must be provided to save a Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salutation_is_not_selected</fullName>
        <active>true</active>
        <errorConditionFormula>NOT (ISBLANK(TEXT( Salutation )))</errorConditionFormula>
        <errorMessage>Please leave Salutation as &quot;None&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Reason_Detail</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
TEXT(Status) == &apos;Unqualified&apos; ,
(TEXT(Lead_Unqualified_Reason__c)==&apos;Other&apos;)
, ISBLANK(Lead_Unqualified_Comments__c)
)</errorConditionFormula>
        <errorMessage>If lead &quot;Unqualified&quot; status is &apos;other&apos; it is mandatory to fill out the Unqualified Reason Detail</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_message_needed</fullName>
        <active>true</active>
        <description>Validation Rule: If Unqualified is selected, then Unqualified Reason is required</description>
        <errorConditionFormula>AND(
TEXT(Status) == &apos;Unqualified&apos;
,
ISBLANK(TEXT(Lead_Unqualified_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>If Unqualified is selected, then Unqualified Reason is required</errorMessage>
    </validationRules>
</CustomObject>